--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ name: React-Animation-4a
 on:
   push:
     branches: [ master ]
-
+  pull_request:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,12 +21,21 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
- # Runs a single command using the runners shell
+   
     - name: Install NodeJS
       uses: actions/setup-node@v2-beta
-      with: 
+      with:
         node-version: 12
+    
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: install # will run `yarn install` command
+        
+    - name: Build React App
+      run: yarn build
+      
     - name: Install Surge
-      run: npm install -g surge
-    - name: Run Surge
-      run: surge ./ mosin_animation4a.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: npm install --global surge
+
+    - name: Deploy to Surge
+      run: surge ./build mosin_Animation4a.surge.sh --token ${{ secrets.SURGE_TOKEN }}
