--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,7 @@ name: React-Animation-4a
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,21 +20,13 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-   
-    - name: Install NodeJS
+
+    # Runs a single command using the runners shell
+    - name: Install node js
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12
-    
-    - uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: install # will run `yarn install` command
-        
-    - name: Build React App
-      run: yarn build
-      
-    - name: Install Surge
-      run: npm install --global surge
-
-    - name: Deploy to Surge
-      run: surge ./build mosin_Animation4a.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+    - name: Install node js
+      run : npm install -g surge
+    - name: Run surge
+      run: surge ./ mosin_animation4a.surge.sh --token ${{secrets.surge_token}}
